--- a/admin/app/views/spree/admin/orders/customer_returns/_reimbursements_table.html.erb
+++ b/admin/app/views/spree/admin/orders/customer_returns/_reimbursements_table.html.erb
@@ -4,7 +4,7 @@
       <th><%= Spree.t(:number) %></th>
       <th><%= Spree.t(:total) %></th>
       <th><%= Spree.t(:status) %></th>
-      <th><%= "#{Spree.t("date")}/#{Spree.t("time")}" %></th>
+      <th><%= Spree.t(:date) %></th>
     </tr>
   </thead>
   <tbody>
