--- a/admin/app/views/spree/admin/orders/customer_returns/edit.html.erb
+++ b/admin/app/views/spree/admin/orders/customer_returns/edit.html.erb
@@ -1,13 +1,15 @@
 <% content_for :page_title do %>
   <%= page_header_back_button spree.edit_admin_order_path(@order) %>
-  <%= Spree.t(:customer_return) %>
-  <%= @customer_return.number %>
+  <div class="d-flex gap-3 align-items-center">
+    <span><%= Spree.t(:customer_return) %></span>
+    <span><%= @customer_return.number %></span>
 
-  <% if @customer_return.fully_reimbursed? %>
-    <span class="badge badge-pill badge-success"><%= Spree.t(:reimbursed) %></span>
-  <% else %>
-    <span class="badge badge-pill badge-inactive"><%= Spree.t(:incomplete) %></span>
-  <% end %>
+    <% if @customer_return.fully_reimbursed? %>
+      <span class="badge badge-pill badge-success"><%= Spree.t(:reimbursed) %></span>
+    <% else %>
+      <span class="badge badge-pill badge-inactive"><%= Spree.t(:incomplete) %></span>
+    <% end %>
+  </div>
 <% end %>
 
 <ul class="list-group bg-white mb-4">
