--- a/admin/app/views/spree/admin/orders/return_authorizations/show.html.erb
+++ b/admin/app/views/spree/admin/orders/return_authorizations/show.html.erb
@@ -1,14 +1,16 @@
 <% content_for :page_title do %>
   <%= page_header_back_button spree.edit_admin_order_path(@order) %>
-  <%= Spree.t(:return_authorization) %>
-  <%= @return_authorization.number %>
-  <span class="state small badge badge-<%= @return_authorization.state %> ml-2">
-    <%= Spree.t("return_authorization_states.#{@return_authorization.state}") %>
-  </span>
-  <%= local_time(
-    @return_authorization.created_at,
-    class: "badge badge-light with-tip ml-3",
-  ) %>
+  <div class="d-flex gap-3 align-items-center">
+    <span><%= Spree.t(:return_authorization) %></span>
+    <span><%= @return_authorization.number %></span>
+    <span class="badge badge-pill badge-<%= @return_authorization.state %>">
+      <%= Spree.t("return_authorization_states.#{@return_authorization.state}") %>
+    </span>
+    <%= local_time(
+      @return_authorization.created_at,
+      class: "badge badge-light with-tip",
+    ) %>
+  </div>
 <% end %>
 
 <%= render partial: "spree/admin/shared/error_messages",
