--- a/admin/app/views/spree/admin/shared/sidebar/_orders_nav.html.erb
+++ b/admin/app/views/spree/admin/shared/sidebar/_orders_nav.html.erb
@@ -1,4 +1,4 @@
-<% orders_active = %[orders checkouts return_index customer_returns].include?(controller_name) || @order %>
+<% orders_active = %[orders checkouts].include?(controller_name) || @order %>
 <li class="nav-item">
   <%= active_link_to spree.admin_orders_path, class: 'nav-link  d-flex align-items-center', active: orders_active do %>
     <%= icon 'inbox', class: 'mr-1' %>
@@ -10,7 +10,7 @@
       </span>
     <% end %>
   <% end %>
-  <% if orders_active && (ready_to_ship_orders_count&.positive? || can?(:manage, :customer_returns) || can?(:manage, :checkouts)) %>
+  <% if orders_active && (ready_to_ship_orders_count&.positive? || can?(:manage, :checkouts)) %>
     <ul class="ml-4 pl-1 mb-2 nav-submenu flex-column mt-1">
       <% if ready_to_ship_orders_count&.positive? %>
         <li class="nav-item">
@@ -20,12 +20,6 @@
               <%= ready_to_ship_orders_count %>
             </span>
           <% end %>
-        </li>
-      <% end %>
-
-      <% if can?(:manage, :customer_returns) %>
-        <li class="nav-item">
-          <%= active_link_to Spree.t(:returns), spree.admin_customer_returns_path, class: 'nav-link' %>
         </li>
       <% end %>
 
