--- a/admin/app/views/spree/admin/customer_returns/index.html.erb
+++ b/admin/app/views/spree/admin/customer_returns/index.html.erb
@@ -37,8 +37,20 @@
       </table>
     </div>
   <% else %>
-  <%= render "spree/admin/shared/no_resource_found" %>
+    <div
+      class="
+        text-muted p-5 d-flex align-items-center w-100 justify-content-center
+      "
+    >
+      <%= Spree.t(
+        :no_resource_found,
+        resource: plural_resource_name(Spree::CustomerReturn),
+      ) %>
+    </div>
   <% end %>
 
-  <%= render partial: "spree/admin/shared/index_table_options", locals: { collection: @collection } %>
+  <%= render partial: "spree/admin/shared/index_table_options",
+  locals: {
+    collection: @collection,
+  } %>
 </div>
