--- a/admin/app/views/spree/admin/shared/_content_header.html.erb
+++ b/admin/app/views/spree/admin/shared/_content_header.html.erb
@@ -14,9 +14,9 @@
     <div id="page_actions" class="ml-auto page-actions d-flex align-items-center gap-2">
       <% if action_name == 'index' && defined?(model_class) && model_class && Spree::Export.available_models.include?(model_class)  %>
         <span data-toggle="modal" data-target="#modal">
-          <%= link_to spree.new_admin_export_path(export: { search_params: params[:q]&.to_json, type: Spree::Export.type_for_model(model_class) }), class: 'btn btn-light bg-transparent', data: { turbo_frame: :dialog_modal } do %>
-            <%= icon 'table-export', class: 'mr-0 mr-lg-2' %>
-            <span class="d-none d-lg-inline"><%= Spree.t(:export) %></span>
+          <%= link_to spree.new_admin_export_path(export: { search_params: params[:q]&.to_json, type: Spree::Export.type_for_model(model_class) }), class: 'btn btn-light bg-transparent with-tip', title: 'Download records as CSV file', data: { turbo_frame: :dialog_modal } do %>
+            <%= icon 'download', class: 'mr-0 mr-lg-2' %>
+            <span class="d-none d-lg-inline"><%= Spree.t(:download) %></span>
           <% end %>
         </span>
       <% end %>
