--- a/admin/app/views/spree/admin/shared/_head.html.erb
+++ b/admin/app/views/spree/admin/shared/_head.html.erb
@@ -43,7 +43,7 @@
 <%= tinymce_assets %>
 <link rel="stylesheet" type="text/css" href="https://unpkg.com/trix@2.1.12/dist/trix.css">
 
-<%= javascript_importmap_tags 'application-spree-admin' %>
+<%= javascript_importmap_tags 'application-spree-admin', importmap: Rails.application.config.spree_admin.importmap %>
 
 <%= yield :head %>
 
