Admin: Improve promotion page

--- a/admin/app/assets/stylesheets/spree/admin/components/_main.scss
+++ b/admin/app/assets/stylesheets/spree/admin/components/_main.scss
@@ -40,6 +40,10 @@ turbo-frame[loading] .spinner-border, turbo-frame[busy] .spinner-border {
   }
 }
 
+#page-header {
+  min-height: 74px;
+}
+
 .page-header-title {
   font-size: 1.5rem;
   font-weight: 700;
