--- a/admin/app/views/spree/admin/promotions/show.html.erb
+++ b/admin/app/views/spree/admin/promotions/show.html.erb
@@ -1,127 +1,10 @@
-<% content_for :page_title do %>
-<%= page_header_back_button spree.admin_promotions_path, @promotion %>
-<%= @promotion.name %>
-<div class="ml-3">
-  <%= render 'spree/admin/promotions/status', promotion: @promotion %>
-</div>
-<% end %>
+<%= render 'spree/admin/promotions/header' %>
 
 <div class="row">
   <div class="col-12 col-lg-8">
-    <% if @promotion.multi_codes? %>
-      <%= turbo_frame_tag :coupon_codes, src: spree.admin_promotion_coupon_codes_path(@promotion) %>
-    <% end %>
   </div>
 
   <div class="col-12 col-lg-4">
-    <% if @promotion.multi_codes? %>
-      <% coupon_codes_count = @promotion.coupon_codes.count %>
-      <% if coupon_codes_count.positive? %>
-        <% used_coupon_codes_count = @promotion.coupon_codes.used.count %>
-        <% remaining_coupon_codes_count = coupon_codes_count - used_coupon_codes_count %>
-
-        <div class="card mb-4">
-          <div class="card-body">
-            <progress max="<%= coupon_codes_count %>" value="<%= used_coupon_codes_count %>" class="w-100"></progress>
-          </div>
-          <div class="card-footer d-flex justify-content-between">
-            <div>
-              Used: <%= used_coupon_codes_count %> / <%= coupon_codes_count %>
-            </div>
-            <div>
-              Remaining: <%= coupon_codes_count - used_coupon_codes_count %>
-            </div>
-          </div>
-        </div>
-      <% end %>
-    <% end %>
-
-    <%= turbo_frame_tag :promotion_edit_details do %>
-      <div class="card mb-4">
-        <div class="card-header d-flex justify-content-between">
-          <h5 class="card-title">
-            <%= Spree.t(:details) %>
-          </h5>
-          <%= link_to_with_icon 'edit', Spree.t(:edit), spree.edit_admin_promotion_path(@promotion), icon: 'pencil', class: 'btn btn-sm btn-light' %>
-        </div>
-        <div class="card-body">
-          <ul class="list-group">
-            <li class="list-group-item d-flex justify-content-between">
-              <span class="text-muted">
-                <%= Spree.t(:name) %>
-              </span>
-              <span>
-                <%= @promotion.name %>
-              </span>
-            </li>
-
-            <li class="list-group-item d-flex justify-content-between">
-              <span class="text-muted">
-                <%= Spree.t(:kind) %>
-              </span>
-              <span class="badge badge-light">
-                <%= @promotion.kind.titleize %>
-              </span>
-            </li>
-
-            <% if @promotion.code.present? %>
-              <li class="list-group-item d-flex justify-content-between" data-controller="clipboard" data-clipboard-success-content="Copied!">
-                <%= Spree.t(:coupon_code) %>
-                <span>
-                  <span class="p-2 bg-light rounded mr-2 h-100">
-                    <span data-clipboard-target="source"><%= @promotion.code.upcase %></span>
-                  </span>
-
-                  <button type="button" class="btn btn-light btn-sm with-tip p-1" data-action="clipboard#copy" title="<%= Spree.t(:copy) %>">
-                    <%= icon 'copy', class: 'mr-0' %>
-                  </button>
-                </span>
-              </li>
-            <% end %>
-          </ul>
-        </div>
-      </div>
-    <% end%>
-
-    <%= turbo_frame_tag :promotion_edit_settings do %>
-      <div class="card">
-        <div class="card-header d-flex justify-content-between">
-          <h5 class="card-title">
-            <%= Spree.t(:settings) %>
-          </h5>
-          <%= link_to_with_icon 'edit', Spree.t(:edit), spree.edit_admin_promotion_path(@promotion), icon: 'pencil', class: 'btn btn-sm btn-light' %>
-        </div>
-        <div class="card-body">
-          <ul class="list-group">
-            <% unless @promotion.multi_codes? %>
-              <li class="list-group-item d-flex justify-content-between">
-                <%= Spree.t(:usage_limit) %>
-                <%= render 'spree/admin/promotions/usage_limit', promotion: @promotion %>
-              </li>
-            <% end %>
-            <li class="list-group-item d-flex justify-content-between">
-              <span class="text-muted">
-                <%= I18n.t('activerecord.attributes.spree/promotion.starts_at') %>
-              </span>
-              <% if @promotion.starts_at %>
-                <span><%= local_time(@promotion.starts_at) %></span>
-              <% else %>
-                <span class="text-muted"><%= Spree.t(:no_start_date) %></span>
-              <% end %>
-            </li>
-            <li class="list-group-item d-flex justify-content-between">
-              <span class="text-muted">
-                <%= I18n.t('activerecord.attributes.spree/promotion.expires_at') %>
-              </span>
-              <% if @promotion.expires_at %>
-                <span><%= local_time(@promotion.expires_at) %></span>
-              <% else %>
-                <span class="text-muted"><%= Spree.t(:no_expiration) %></span>
-              <% end %>
-            </li>
-          </ul>
-        </div>
-      </div>
-    <% end %>
+    <%= render 'spree/admin/promotions/sidebar' %>
   </div>
 </div>
