--- a/admin/app/views/spree/admin/coupon_codes/index.html.erb
+++ b/admin/app/views/spree/admin/coupon_codes/index.html.erb
@@ -1,59 +1,70 @@
-<% content_for :page_title do %>
-  <%= page_header_back_button spree.admin_promotions_path, @promotion %>
-  <%= @promotion.name %>
-<% end %>
+<%= render 'spree/admin/promotions/header' %>
 
-<% content_for :page_actions do %>
-  <%= link_to spree.admin_promotion_coupon_codes_path(@promotion, format: :csv), class: 'btn btn-light bg-transparent with-tip', title: 'Download coupons ad a CSV file' do %>
-    <%= icon 'download' %>
-    <%= Spree.t(:download) %>
-  <% end %>
-<% end %>
+<div class="row">
+  <div class="col-12 col-lg-8">
+    <div class="card-lg p-0">
+      <%= search_form_for [:admin, @promotion, @search], class: "filter-wrap border-bottom" do |f| %>
+        <div class="d-flex flex-column flex-lg-row gap-2">
+          <%= render 'spree/admin/shared/filters_search_bar', param: :code_eq %>
 
-<%= turbo_frame_tag :coupon_codes do %>
+          <div class="d-flex align-items-center justify-content-between">
+            <div class="dropdown h-100">
+              <button class="btn btn-light h-100 dropdown-toggle" type="button" data-toggle="dropdown" data-display="static" data-flip="false" aria-expanded="false">
+                <span class="text-muted font-weight-normal">
+                  <%= Spree.t(:show) %>
+                </span>
+                <%= Spree.t(:all) if (params[:q] || {}).values_at(:state_eq).all?(&:blank?) %>
+                <%= Spree.t('admin.coupon_codes.used') if params.dig(:q, :state_eq) == 'used' %>
+                <%= Spree.t('admin.coupon_codes.unused') if params.dig(:q, :state_eq) == 'unused' %>
+              </button>
+              <div class="dropdown-menu w-100 font-size-sm" style="min-width: 200px">
+                <%= active_link_to Spree.t('admin.orders.all'),
+                  spree.admin_promotion_coupon_codes_path,
+                  class: 'dropdown-item',
+                  active: (params[:q] || {}).values_at(:state_eq).all?(&:blank?) %>
+                <%= link_to Spree.t('admin.coupon_codes.used'),
+                  params.merge({q: {state_eq: :used}}).permit!,
+                  class: "dropdown-item #{'active' if params.dig(:q, :state_eq) == 'used'}" %>
+                <%= link_to Spree.t('admin.coupon_codes.unused'),
+                  params.merge({q: {state_eq: :unused}}).permit!,
+                  class: "dropdown-item #{'active' if params.dig(:q, :state_eq) == 'unused'}" %>
+              </div>
+            </div>
+          </div>
 
-  <ul id="table-tabs" class="nav nav-pills d-inline-flex mb-3">
-    <li class="nav-item">
-      <%= link_to Spree.t('admin.orders.all'),
-        spree.admin_promotion_coupon_codes_path,
-        class: "nav-link #{'active' if (params[:q] || {}).values_at(:state_eq ).all?(&:blank?)}" %>
-    </li>
+          <%= link_to spree.admin_promotion_coupon_codes_path(@promotion, format: :csv), class: 'btn btn-light bg-transparent with-tip', title: 'Download coupons as a CSV file' do %>
+            <%= icon 'download' %>
+            <%= Spree.t(:download) %>
+          <% end %>
+        </div>
+      <% end %>
 
-    <li class="nav-item">
-      <%= link_to Spree.t('admin.coupon_codes.used'),
-        params.merge({q: {state_eq: :used}}).permit!,
-        class: "nav-link #{'active' if params.dig(:q, :state_eq) == 'used'}" %>
-    </li>
-
-    <li class="nav-item">
-      <%= link_to Spree.t('admin.coupon_codes.unused'),
-        params.merge({q: {state_eq: :unused}}).permit!,
-        class: "nav-link #{'active' if params.dig(:q, :state_eq) == 'unused'}" %>
-    </li>
-  </ul>
-
-  <div class="table-responsive card-lg p-0">
-    <% if @coupon_codes.any? %>
-      <table class="table">
-        <thead class="text-muted">
-        <tr data-hook="rate_header">
-          <th><%= Spree.t(:code) %></th>
-          <th><%= Spree.t(:used) %></th>
-          <th><%= Spree.t(:created_at) %></th>
-          <th></th>
-        </tr>
-        </thead>
-        <tbody>
-        <%= render collection: @coupon_codes.pluck(:id, :code, :state, :created_at), partial: 'spree/admin/coupon_codes/coupon_code', cached: spree_base_cache_scope %>
-        </tbody>
-      </table>
-    <% else %>
-      <div class="text-muted p-5 d-flex align-items-center w-100 justify-content-center">
-        <%= Spree.t(:no_resource_found, resource: plural_resource_name(Spree::CouponCode)) %>
+      <div class="table-responsive">
+        <% if @coupon_codes.any? %>
+          <table class="table">
+            <thead class="text-muted">
+            <tr data-hook="rate_header">
+              <th><%= Spree.t(:code) %></th>
+              <th><%= Spree.t(:used) %></th>
+              <th><%= Spree.t(:created_at) %></th>
+            </tr>
+            </thead>
+            <tbody>
+              <%= render collection: @coupon_codes.pluck(:id, :code, :state, :created_at), partial: 'spree/admin/coupon_codes/coupon_code', cached: spree_base_cache_scope %>
+            </tbody>
+          </table>
+        <% else %>
+          <div class="text-muted p-5 d-flex align-items-center w-100 justify-content-center">
+            <%= Spree.t(:no_resource_found, resource: plural_resource_name(Spree::CouponCode)) %>
+          </div>
+        <% end %>
       </div>
-    <% end %>
+
+      <%= render 'spree/admin/shared/index_table_options', collection: @coupon_codes, simple: true if @coupon_codes.any? %>
+    </div>
   </div>
 
-
-  <%= render 'spree/admin/shared/index_table_options', collection: @coupon_codes, simple: true if @coupon_codes.any? %>
-<% end %>
+  <div class="col-12 col-lg-4">
+    <%= render 'spree/admin/promotions/sidebar' %>
+  </div>
+</div>
