--- a/admin/app/views/spree/admin/customer_returns/index.html.erb
+++ b/admin/app/views/spree/admin/customer_returns/index.html.erb
@@ -32,7 +32,8 @@
         </thead>
         <tbody>
           <%= render collection: @collection,
-          partial: "spree/admin/orders/customer_returns/customer_return" %>
+          partial: "spree/admin/customer_returns/customer_return",
+          cached: spree_base_cache_scope %>
         </tbody>
       </table>
     </div>
