--- a/admin/app/views/spree/admin/orders/_return_authorizations.html.erb
+++ b/admin/app/views/spree/admin/orders/_return_authorizations.html.erb
@@ -13,37 +13,11 @@
               <th><%= Spree.t(:status) %></th>
               <th><%= Spree.t(:pre_tax_total) %></th>
               <th><%= "#{Spree.t("date")}/#{Spree.t("time")}" %></th>
+              <th></th>
             </tr>
           </thead>
           <tbody>
-            <% @return_authorizations.each do |return_authorization| %>
-              <tr
-                id="<%= spree_dom_id(return_authorization) %>"
-                data-controller="row-link"
-                class="cursor-pointer"
-              >
-                <td data-action="click->row-link#openLink" class="font-weight-bolder">
-                  <%= link_to return_authorization.number,
-                  (
-                    if can?(:edit, return_authorization)
-                      spree.edit_admin_order_return_authorization_path(@order, return_authorization)
-                    else
-                      spree.admin_order_return_authorization_path(@order, return_authorization)
-                    end
-                  ),
-                  data: {
-                    row_link_target: "link",
-                  } %>
-                </td>
-                <td data-action="click->row-link#openLink">
-                  <small class="badge badge-pill badge-<%= return_authorization.state %>">
-                    <%= Spree.t("return_authorization_states.#{return_authorization.state}") %>
-                  </small>
-                </td>
-                <td data-action="click->row-link#openLink"><%= return_authorization.display_pre_tax_total.to_html %></td>
-                <td data-action="click->row-link#openLink"><%= local_time(return_authorization.created_at) %></td>
-              </tr>
-            <% end %>
+            <%= render partial: 'spree/admin/orders/return_authorizations/return_authorization', collection: @return_authorizations, cached: spree_base_cache_scope %>
           </tbody>
         </table>
       </div>
