--- a/admin/app/views/spree/admin/orders/customer_returns/_customer_return.html.erb
+++ b/admin/app/views/spree/admin/orders/customer_returns/_customer_return.html.erb
@@ -1,24 +1,22 @@
-<% if customer_return.order.present? %>
+<% edit_link =
+  if can?(:edit, customer_return)
+    spree.edit_admin_order_customer_return_path(@order, customer_return)
+  else
+    "#"
+  end %>
+
+<% can_create_reimbursement =
+  customer_return.can_create_reimbursement? &&
+    can?(:create, Spree::Reimbursement) %>
+
   <tr
-    id="<%= spree_dom_id customer_return %>"
+    id="<%= spree_dom_id(customer_return) %>"
     data-controller="row-link"
     class="cursor-pointer"
   >
-    <td class="font-weight-bold" data-action="click->row-link#openLink">
-      <% if can?(:edit, customer_return) %>
-        <%= link_to customer_return.number,
-        spree.edit_admin_order_customer_return_path( customer_return.order, customer_return),
-        data: {
-          row_link_target: "link",
-        } %>
-      <% else %>
-        <%= customer_return.number %>
-      <% end %>
+    <td data-action="click->row-link#openLink" class="font-weight-bolder">
+      <%= link_to customer_return.number, edit_link %>
     </td>
-    <td data-action="click->row-link#openLink"><%= local_time(customer_return.created_at) %></td>
-    <td data-action="click->row-link#openLink"><%= render "spree/admin/orders/customer_summary", order: customer_return.order %></td>
-    <td data-action="click->row-link#openLink"><%= link_to customer_return.order.number,
-      spree.edit_admin_order_path(customer_return.order) %></td>
     <td data-action="click->row-link#openLink">
       <% if customer_return.fully_reimbursed? %>
         <span class="badge badge-success"><%= Spree.t(:reimbursed) %></span>
@@ -27,5 +25,46 @@
       <% end %>
     </td>
     <td data-action="click->row-link#openLink"><%= customer_return.display_pre_tax_total.to_html %></td>
+    <td data-action="click->row-link#openLink"><%= local_time(customer_return.created_at) %></td>
+    <td>
+      <% if can_create_reimbursement %>
+        <span class="dropdown">
+          <button
+            class="btn btn-light btn-sm"
+            type="button"
+            data-toggle="dropdown"
+            aria-expanded="false"
+          >
+            <%= icon("dots", class: "mr-0") %>
+          </button>
+          <div class="dropdown-menu">
+            <%= link_to_edit(
+              customer_return,
+              data: {
+                row_link_target: :link,
+              },
+              class: "dropdown-item",
+              url: edit_link,
+            ) %>
+            <%= form_for [:admin, @order, Spree::Reimbursement.new] do |f| %>
+              <%= hidden_field_tag :build_from_customer_return_id, customer_return.id %>
+              <%= f.button class: 'dropdown-item' do %>
+                <%= icon "plus" %>
+                <%= Spree.t(:create_reimbursement) %>
+              <% end %>
+            <% end %>
+          </div>
+        </span>
+      <% else %>
+        <%= link_to_edit(
+          customer_return,
+          no_text: true,
+          data: {
+            row_link_target: :link,
+          },
+          class: "btn btn-light btn-sm",
+          url: edit_link,
+        ) %>
+      <% end %>
+    </td>
   </tr>
-<% end %>
