--- a/admin/app/views/spree/admin/reimbursement_types/_form.html.erb
+++ b/admin/app/views/spree/admin/reimbursement_types/_form.html.erb
@@ -2,29 +2,29 @@
   <div class="card-body">
     <div class="form-group">
       <%= f.label :name, Spree.t(:name) %>
-      <%= f.text_field :name, class:'form-control' %>
+      <%= f.text_field :name, class: "form-control" %>
       <%= f.error_message_on :name %>
     </div>
     <%- if @reimbursement_type.new_record? %>
       <div class="form-group">
         <%= f.label :type, Spree.t(:type) %>
-        <%= f.select :type, options_for_select(Spree::ReimbursementType::KINDS.map { |kind| [kind.demodulize.titleize, kind] }), { include_blank: false}, { class: 'custom-select' } %>
+        <%= f.select :type,
+                 options_for_select(
+                   Spree::ReimbursementType::KINDS.map do |kind|
+                     [kind.demodulize.titleize, kind]
+                   end,
+                 ),
+                 { include_blank: false },
+                 { class: "custom-select" } %>
         <%= f.error_message_on :type %>
-    </div>
+      </div>
     <% end %>
     <div class="form-group">
       <div class="custom-control custom-checkbox">
-        <%= f.check_box :active, class: 'custom-control-input' %>
-        <%= f.label :active, Spree.t(:active), class: 'custom-control-label' %>
+        <%= f.check_box :active, class: "custom-control-input" %>
+        <%= f.label :active, Spree.t(:active), class: "custom-control-label" %>
       </div>
       <%= f.error_message_on :active %>
-    </div>
-    <div class="form-group">
-      <div class="custom-control custom-checkbox">
-        <%= f.check_box :mutable, class: 'custom-control-input' %>
-        <%= f.label :mutable, Spree.t(:mutable), class: 'custom-control-label' %>
-      </div>
-      <%= f.error_message_on :mutable %>
     </div>
   </div>
 </div>
