Added ability to manage promotion rules

--- a/admin/app/views/spree/admin/promotions/_form.html.erb
+++ b/admin/app/views/spree/admin/promotions/_form.html.erb
@@ -1,4 +1,4 @@
-<%= render partial: 'spree/admin/shared/error_messages', locals: { target: @promotion } %>
+<%= render 'spree/admin/shared/error_messages', target: @promotion %>
 
 <div class="row">
   <div class="col-12 col-lg-8">
