--- a/admin/app/views/spree/admin/dashboard/_top_products.html.erb
+++ b/admin/app/views/spree/admin/dashboard/_top_products.html.erb
@@ -1,8 +1,11 @@
+<% report_link = spree.new_admin_report_path(type: 'products_performance', date_from: params[:date_from], date_to: params[:date_to], vendor_id: @vendor.try(:id)) %>
+
 <div class="card mt-3 mb-4">
-  <div class="card-header pb-3">
+  <div class="card-header d-flex justify-content-between align-items-center">
     <h5 class="card-title">
-      Top products
+      <%= Spree.t('admin.dashboard.top_products') %>
     </h5>
+    <%= link_to Spree.t('admin.dashboard.view_report'), report_link, class: 'btn btn-light btn-sm', data: { turbo_frame: '_top' } %>
   </div>
   <div class="card-body m-0 p-0">
     <div class="table-responsive">
@@ -62,7 +65,7 @@
     </table>
   </div>
   <p class="text-center mt-0 border-top py-2 mb-0">
-    <%= link_to 'Show full report', spree.new_admin_report_path(type: 'products_performance', date_from: params[:date_from], date_to: params[:date_to], vendor_id: @vendor.try(:id)), class: 'm-2 w-50 btn btn-light mt-2', data: { turbo_frame: '_top' } %>
+    <%= link_to Spree.t('admin.dashboard.view_report'), report_link, class: 'm-2 w-50 btn btn-light mt-2', data: { turbo_frame: '_top' } %>
   </p>
   </div>
 </div>
