--- a/admin/app/assets/stylesheets/spree/admin/components/_dropdowns.scss
+++ b/admin/app/assets/stylesheets/spree/admin/components/_dropdowns.scss
@@ -2,10 +2,9 @@
   color: $gray-500 !important;
 }
 .dropdown-menu {
-  @extend .p-1;
-
-  box-shadow: 0px 4px 16px 0px hsla(0, 0%, 65%, 0.3);
   overflow: hidden !important;
+
+  box-shadow: $dropdown-box-shadow;
 
   animation: fadeIn;
   animation-duration: 0.2s;
